--- a/public/03-programming-fundamentals/index.html
+++ b/public/03-programming-fundamentals/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=63987&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=64060&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>03. Programming Fundamentals</title>
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/components/dark_starfield_bg.css">
+  <link rel="stylesheet" href="/css/components/light_grid_bg.css">
 </head>
-<body>
+<body class="dark-mode">
+  <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
+    <span class="toggle-icon">🌙</span>
+  </button>
+  
+  <div id="background-container"></div>
+  
   
   <h1>03. Programming Fundamentals</h1>
   
   
 
+  
+  <script src="/js/components/dark_starfield_bg.js"></script>
+  <script src="/js/components/light_grid_bg.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
